[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "war-thunder-plane-info"
version = "0.0.1"
authors = [
  { name="Sergey Titkov", email="srg.titkov@gmail.com" },
]
dependencies = [
  "csv",
  "json",
  "logging",
  "os",
]

description = "Получение информации о самолетах"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Sergey-Titkov/Analise-War-Thunder-Datamine"
Issues = "https://github.com/Sergey-Titkov/Analise-War-Thunder-Datamine/issues"
Discord = "https://discord.gg/ktstFYtyUR"